src/objects/Macroprofil_Service__c.object
<CustomObject>
    <description>Services ajoutés par défaut au relais lors de son association avec un macro-profil.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desactive__c</fullName>
        <formula>IF( Active__c =true,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Désactivé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Macroprofil__c</fullName>
        <label>Macroprofil</label>
        <referenceTo>Macroprofil__c</referenceTo>
        <relationshipLabel>Services par défaut</relationshipLabel>
        <relationshipName>Services_par_defaut</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Modifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Externe__c</fullName>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Macroprofil liés à ce service</relationshipLabel>
        <relationshipName>Services_par_defaut</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Techatraiter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Techatraiter</label>
        <type>Checkbox</type>
    </fields>
    <label>Service par défaut</label>
    <nameField>
        <displayFormat>SPD-{0000}</displayFormat>
        <label>Numéro du Service par defaut</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services par défaut</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ServiceDefault_VR01_chooseOneValue</fullName>
        <active>true</active>
        <errorConditionFormula>If(Active__c = true,1,0)+ 
If(Exclu__c = true,1,0)+ 
If(Interdit__c = true, 1,0) 
&gt; 1</errorConditionFormula>
        <errorMessage>Veuillez choisir une des cases à cochés suivantes (Activé, Exclu ou Interdit)</errorMessage>
    </validationRules>
</CustomObject>